# ImageAnalystRKNN-models

./: .gitignore  README.md  pyproject.toml
src/: image_analyst_rknn_builder.py
